# crud-guide

./: .env.example  .gitignore  Cargo.toml  README.md  SETUP_STEP3.md  STRUCTURE.md  docker-compose.yml  learnings.md
migrations/: 20251214202409_create_users_table.sql
src/: db.rs  lib.rs  main.rs  routes.rs
src/handlers/: health.rs  mod.rs  users.rs
src/models/: mod.rs  user.rs
