[package]
name = "rust-crud"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }


